--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show-sql=true
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bmsDB
-spring.datasource.username=root
-spring.datasource.password=543213Abc
+spring.application.name=BookMyShow
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=bookmyshow
